--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,17 @@
     </build>
     <name>zhl Library</name>
     <description>openfeign-webflux</description>
-    <url/>
+    <url>https://github.com/mdsfight/openfeign-webflux</url>
     <licenses>
         <license>
             <name>Apache-2.0</name>
             <url>https://opensource.org/licenses/Apache-2.0</url>
         </license>
     </licenses>
+    <scm>
+        <connection>scm:git:git://github.com/mdsfight/openfeign-webflux.git</connection>
+        <url>https://github.com/mdsfight/openfeign-webflux</url>
+    </scm>
     <developers>
         <developer>
             <name>zhl</name>
